parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> component_list
Rule 2     component_list -> component_list component
Rule 3     component_list -> component
Rule 4     component_list -> empty
Rule 5     component -> function_definition
Rule 6     component -> main_block
Rule 7     function_definition -> type_specifier FUNCTION_NAME LPAREN parameters_opt RPAREN DOT block
Rule 8     parameters_opt -> parameter_list
Rule 9     parameters_opt -> empty
Rule 10    parameter_list -> parameter_list COMMA parameter
Rule 11    parameter_list -> parameter
Rule 12    parameter -> type_specifier IDENTIFIER
Rule 13    type_specifier -> INTEIRO
Rule 14    main_block -> block
Rule 15    block -> INICIO DOT statement_list_opt FIM DOT
Rule 16    statement_list_opt -> statement_list
Rule 17    statement_list_opt -> empty
Rule 18    statement_list -> statement_list statement
Rule 19    statement_list -> statement
Rule 20    variable_declaration -> type_specifier IDENTIFIER
Rule 21    statement -> variable_declaration DOT
Rule 22    statement -> expression_statement DOT
Rule 23    statement -> if_statement
Rule 24    statement -> while_statement
Rule 25    expression_statement -> expression
Rule 26    if_statement -> SE expression DOT ENTAO DOT block senao_opt
Rule 27    senao_opt -> SENAO DOT block
Rule 28    senao_opt -> empty
Rule 29    while_statement -> ENQUANTO expression DOT block
Rule 30    lvalue -> IDENTIFIER
Rule 31    lvalue -> ELGIO
Rule 32    expression -> lvalue EQUALS expression
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression TIMES expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> expression MAIOR expression
Rule 38    expression -> expression MENOR expression
Rule 39    expression -> expression IGUAL expression
Rule 40    expression -> expression DIFERENTE expression
Rule 41    expression -> COMP expression
Rule 42    expression -> LPAREN expression RPAREN
Rule 43    expression -> INTEGER
Rule 44    expression -> ZERO
Rule 45    expression -> IDENTIFIER
Rule 46    expression -> ELGIO
Rule 47    expression -> FUNCTION_NAME LPAREN argument_list_opt RPAREN
Rule 48    argument_list_opt -> argument_list
Rule 49    argument_list_opt -> empty
Rule 50    argument_list -> argument_list COMMA expression
Rule 51    argument_list -> expression
Rule 52    empty -> <empty>

Terminals, with rules where they appear

COMMA                : 10 50
COMP                 : 41
DIFERENTE            : 40
DIVIDE               : 36
DOT                  : 7 15 15 21 22 26 26 27 29
ELGIO                : 31 46
ENQUANTO             : 29
ENTAO                : 26
EQUALS               : 32
FIM                  : 15
FUNCTION_NAME        : 7 47
IDENTIFIER           : 12 20 30 45
IGUAL                : 39
INICIO               : 15
INTEGER              : 43
INTEIRO              : 13
LPAREN               : 7 42 47
MAIOR                : 37
MENOR                : 38
MINUS                : 34
PLUS                 : 33
RPAREN               : 7 42 47
SE                   : 26
SENAO                : 27
TIMES                : 35
ZERO                 : 44
error                : 

Nonterminals, with rules where they appear

argument_list        : 48 50
argument_list_opt    : 47
block                : 7 14 26 27 29
component            : 2 3
component_list       : 1 2
empty                : 4 9 17 28 49
expression           : 25 26 29 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 50 51
expression_statement : 22
function_definition  : 5
if_statement         : 23
lvalue               : 32
main_block           : 6
parameter            : 10 11
parameter_list       : 8 10
parameters_opt       : 7
program              : 0
senao_opt            : 26
statement            : 18 19
statement_list       : 16 18
statement_list_opt   : 15
type_specifier       : 7 12 20
variable_declaration : 21
while_statement      : 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . component_list
    (2) component_list -> . component_list component
    (3) component_list -> . component
    (4) component_list -> . empty
    (5) component -> . function_definition
    (6) component -> . main_block
    (52) empty -> .
    (7) function_definition -> . type_specifier FUNCTION_NAME LPAREN parameters_opt RPAREN DOT block
    (14) main_block -> . block
    (13) type_specifier -> . INTEIRO
    (15) block -> . INICIO DOT statement_list_opt FIM DOT

  ! shift/reduce conflict for INTEIRO resolved as shift
  ! shift/reduce conflict for INICIO resolved as shift
    $end            reduce using rule 52 (empty -> .)
    INTEIRO         shift and go to state 9
    INICIO          shift and go to state 10

  ! INTEIRO         [ reduce using rule 52 (empty -> .) ]
  ! INICIO          [ reduce using rule 52 (empty -> .) ]

    program                        shift and go to state 1
    component_list                 shift and go to state 2
    component                      shift and go to state 3
    empty                          shift and go to state 4
    function_definition            shift and go to state 5
    main_block                     shift and go to state 6
    type_specifier                 shift and go to state 7
    block                          shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> component_list .
    (2) component_list -> component_list . component
    (5) component -> . function_definition
    (6) component -> . main_block
    (7) function_definition -> . type_specifier FUNCTION_NAME LPAREN parameters_opt RPAREN DOT block
    (14) main_block -> . block
    (13) type_specifier -> . INTEIRO
    (15) block -> . INICIO DOT statement_list_opt FIM DOT

    $end            reduce using rule 1 (program -> component_list .)
    INTEIRO         shift and go to state 9
    INICIO          shift and go to state 10

    component                      shift and go to state 11
    function_definition            shift and go to state 5
    main_block                     shift and go to state 6
    type_specifier                 shift and go to state 7
    block                          shift and go to state 8

state 3

    (3) component_list -> component .

    INTEIRO         reduce using rule 3 (component_list -> component .)
    INICIO          reduce using rule 3 (component_list -> component .)
    $end            reduce using rule 3 (component_list -> component .)


state 4

    (4) component_list -> empty .

    INTEIRO         reduce using rule 4 (component_list -> empty .)
    INICIO          reduce using rule 4 (component_list -> empty .)
    $end            reduce using rule 4 (component_list -> empty .)


state 5

    (5) component -> function_definition .

    INTEIRO         reduce using rule 5 (component -> function_definition .)
    INICIO          reduce using rule 5 (component -> function_definition .)
    $end            reduce using rule 5 (component -> function_definition .)


state 6

    (6) component -> main_block .

    INTEIRO         reduce using rule 6 (component -> main_block .)
    INICIO          reduce using rule 6 (component -> main_block .)
    $end            reduce using rule 6 (component -> main_block .)


state 7

    (7) function_definition -> type_specifier . FUNCTION_NAME LPAREN parameters_opt RPAREN DOT block

    FUNCTION_NAME   shift and go to state 12


state 8

    (14) main_block -> block .

    INTEIRO         reduce using rule 14 (main_block -> block .)
    INICIO          reduce using rule 14 (main_block -> block .)
    $end            reduce using rule 14 (main_block -> block .)


state 9

    (13) type_specifier -> INTEIRO .

    FUNCTION_NAME   reduce using rule 13 (type_specifier -> INTEIRO .)
    IDENTIFIER      reduce using rule 13 (type_specifier -> INTEIRO .)


state 10

    (15) block -> INICIO . DOT statement_list_opt FIM DOT

    DOT             shift and go to state 13


state 11

    (2) component_list -> component_list component .

    INTEIRO         reduce using rule 2 (component_list -> component_list component .)
    INICIO          reduce using rule 2 (component_list -> component_list component .)
    $end            reduce using rule 2 (component_list -> component_list component .)


state 12

    (7) function_definition -> type_specifier FUNCTION_NAME . LPAREN parameters_opt RPAREN DOT block

    LPAREN          shift and go to state 14


state 13

    (15) block -> INICIO DOT . statement_list_opt FIM DOT
    (16) statement_list_opt -> . statement_list
    (17) statement_list_opt -> . empty
    (18) statement_list -> . statement_list statement
    (19) statement_list -> . statement
    (52) empty -> .
    (21) statement -> . variable_declaration DOT
    (22) statement -> . expression_statement DOT
    (23) statement -> . if_statement
    (24) statement -> . while_statement
    (20) variable_declaration -> . type_specifier IDENTIFIER
    (25) expression_statement -> . expression
    (26) if_statement -> . SE expression DOT ENTAO DOT block senao_opt
    (29) while_statement -> . ENQUANTO expression DOT block
    (13) type_specifier -> . INTEIRO
    (32) expression -> . lvalue EQUALS expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MAIOR expression
    (38) expression -> . expression MENOR expression
    (39) expression -> . expression IGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . COMP expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . INTEGER
    (44) expression -> . ZERO
    (45) expression -> . IDENTIFIER
    (46) expression -> . ELGIO
    (47) expression -> . FUNCTION_NAME LPAREN argument_list_opt RPAREN
    (30) lvalue -> . IDENTIFIER
    (31) lvalue -> . ELGIO

    FIM             reduce using rule 52 (empty -> .)
    SE              shift and go to state 26
    ENQUANTO        shift and go to state 27
    INTEIRO         shift and go to state 9
    COMP            shift and go to state 29
    LPAREN          shift and go to state 30
    INTEGER         shift and go to state 31
    ZERO            shift and go to state 32
    IDENTIFIER      shift and go to state 24
    ELGIO           shift and go to state 33
    FUNCTION_NAME   shift and go to state 34

    statement_list_opt             shift and go to state 15
    statement_list                 shift and go to state 16
    empty                          shift and go to state 17
    statement                      shift and go to state 18
    variable_declaration           shift and go to state 19
    expression_statement           shift and go to state 20
    if_statement                   shift and go to state 21
    while_statement                shift and go to state 22
    type_specifier                 shift and go to state 23
    expression                     shift and go to state 25
    lvalue                         shift and go to state 28

state 14

    (7) function_definition -> type_specifier FUNCTION_NAME LPAREN . parameters_opt RPAREN DOT block
    (8) parameters_opt -> . parameter_list
    (9) parameters_opt -> . empty
    (10) parameter_list -> . parameter_list COMMA parameter
    (11) parameter_list -> . parameter
    (52) empty -> .
    (12) parameter -> . type_specifier IDENTIFIER
    (13) type_specifier -> . INTEIRO

    RPAREN          reduce using rule 52 (empty -> .)
    INTEIRO         shift and go to state 9

    type_specifier                 shift and go to state 35
    parameters_opt                 shift and go to state 36
    parameter_list                 shift and go to state 37
    empty                          shift and go to state 38
    parameter                      shift and go to state 39

state 15

    (15) block -> INICIO DOT statement_list_opt . FIM DOT

    FIM             shift and go to state 40


state 16

    (16) statement_list_opt -> statement_list .
    (18) statement_list -> statement_list . statement
    (21) statement -> . variable_declaration DOT
    (22) statement -> . expression_statement DOT
    (23) statement -> . if_statement
    (24) statement -> . while_statement
    (20) variable_declaration -> . type_specifier IDENTIFIER
    (25) expression_statement -> . expression
    (26) if_statement -> . SE expression DOT ENTAO DOT block senao_opt
    (29) while_statement -> . ENQUANTO expression DOT block
    (13) type_specifier -> . INTEIRO
    (32) expression -> . lvalue EQUALS expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MAIOR expression
    (38) expression -> . expression MENOR expression
    (39) expression -> . expression IGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . COMP expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . INTEGER
    (44) expression -> . ZERO
    (45) expression -> . IDENTIFIER
    (46) expression -> . ELGIO
    (47) expression -> . FUNCTION_NAME LPAREN argument_list_opt RPAREN
    (30) lvalue -> . IDENTIFIER
    (31) lvalue -> . ELGIO

    FIM             reduce using rule 16 (statement_list_opt -> statement_list .)
    SE              shift and go to state 26
    ENQUANTO        shift and go to state 27
    INTEIRO         shift and go to state 9
    COMP            shift and go to state 29
    LPAREN          shift and go to state 30
    INTEGER         shift and go to state 31
    ZERO            shift and go to state 32
    IDENTIFIER      shift and go to state 24
    ELGIO           shift and go to state 33
    FUNCTION_NAME   shift and go to state 34

    statement                      shift and go to state 41
    variable_declaration           shift and go to state 19
    expression_statement           shift and go to state 20
    if_statement                   shift and go to state 21
    while_statement                shift and go to state 22
    type_specifier                 shift and go to state 23
    expression                     shift and go to state 25
    lvalue                         shift and go to state 28

state 17

    (17) statement_list_opt -> empty .

    FIM             reduce using rule 17 (statement_list_opt -> empty .)


state 18

    (19) statement_list -> statement .

    SE              reduce using rule 19 (statement_list -> statement .)
    ENQUANTO        reduce using rule 19 (statement_list -> statement .)
    INTEIRO         reduce using rule 19 (statement_list -> statement .)
    COMP            reduce using rule 19 (statement_list -> statement .)
    LPAREN          reduce using rule 19 (statement_list -> statement .)
    INTEGER         reduce using rule 19 (statement_list -> statement .)
    ZERO            reduce using rule 19 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 19 (statement_list -> statement .)
    ELGIO           reduce using rule 19 (statement_list -> statement .)
    FUNCTION_NAME   reduce using rule 19 (statement_list -> statement .)
    FIM             reduce using rule 19 (statement_list -> statement .)


state 19

    (21) statement -> variable_declaration . DOT

    DOT             shift and go to state 42


state 20

    (22) statement -> expression_statement . DOT

    DOT             shift and go to state 43


state 21

    (23) statement -> if_statement .

    SE              reduce using rule 23 (statement -> if_statement .)
    ENQUANTO        reduce using rule 23 (statement -> if_statement .)
    INTEIRO         reduce using rule 23 (statement -> if_statement .)
    COMP            reduce using rule 23 (statement -> if_statement .)
    LPAREN          reduce using rule 23 (statement -> if_statement .)
    INTEGER         reduce using rule 23 (statement -> if_statement .)
    ZERO            reduce using rule 23 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 23 (statement -> if_statement .)
    ELGIO           reduce using rule 23 (statement -> if_statement .)
    FUNCTION_NAME   reduce using rule 23 (statement -> if_statement .)
    FIM             reduce using rule 23 (statement -> if_statement .)


state 22

    (24) statement -> while_statement .

    SE              reduce using rule 24 (statement -> while_statement .)
    ENQUANTO        reduce using rule 24 (statement -> while_statement .)
    INTEIRO         reduce using rule 24 (statement -> while_statement .)
    COMP            reduce using rule 24 (statement -> while_statement .)
    LPAREN          reduce using rule 24 (statement -> while_statement .)
    INTEGER         reduce using rule 24 (statement -> while_statement .)
    ZERO            reduce using rule 24 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 24 (statement -> while_statement .)
    ELGIO           reduce using rule 24 (statement -> while_statement .)
    FUNCTION_NAME   reduce using rule 24 (statement -> while_statement .)
    FIM             reduce using rule 24 (statement -> while_statement .)


state 23

    (20) variable_declaration -> type_specifier . IDENTIFIER

    IDENTIFIER      shift and go to state 44


state 24

    (45) expression -> IDENTIFIER .
    (30) lvalue -> IDENTIFIER .

    PLUS            reduce using rule 45 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 45 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 45 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 45 (expression -> IDENTIFIER .)
    MAIOR           reduce using rule 45 (expression -> IDENTIFIER .)
    MENOR           reduce using rule 45 (expression -> IDENTIFIER .)
    IGUAL           reduce using rule 45 (expression -> IDENTIFIER .)
    DIFERENTE       reduce using rule 45 (expression -> IDENTIFIER .)
    DOT             reduce using rule 45 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 45 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 45 (expression -> IDENTIFIER .)
    EQUALS          reduce using rule 30 (lvalue -> IDENTIFIER .)


state 25

    (25) expression_statement -> expression .
    (33) expression -> expression . PLUS expression
    (34) expression -> expression . MINUS expression
    (35) expression -> expression . TIMES expression
    (36) expression -> expression . DIVIDE expression
    (37) expression -> expression . MAIOR expression
    (38) expression -> expression . MENOR expression
    (39) expression -> expression . IGUAL expression
    (40) expression -> expression . DIFERENTE expression

    DOT             reduce using rule 25 (expression_statement -> expression .)
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    TIMES           shift and go to state 47
    DIVIDE          shift and go to state 48
    MAIOR           shift and go to state 49
    MENOR           shift and go to state 50
    IGUAL           shift and go to state 51
    DIFERENTE       shift and go to state 52


state 26

    (26) if_statement -> SE . expression DOT ENTAO DOT block senao_opt
    (32) expression -> . lvalue EQUALS expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MAIOR expression
    (38) expression -> . expression MENOR expression
    (39) expression -> . expression IGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . COMP expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . INTEGER
    (44) expression -> . ZERO
    (45) expression -> . IDENTIFIER
    (46) expression -> . ELGIO
    (47) expression -> . FUNCTION_NAME LPAREN argument_list_opt RPAREN
    (30) lvalue -> . IDENTIFIER
    (31) lvalue -> . ELGIO

    COMP            shift and go to state 29
    LPAREN          shift and go to state 30
    INTEGER         shift and go to state 31
    ZERO            shift and go to state 32
    IDENTIFIER      shift and go to state 24
    ELGIO           shift and go to state 33
    FUNCTION_NAME   shift and go to state 34

    expression                     shift and go to state 53
    lvalue                         shift and go to state 28

state 27

    (29) while_statement -> ENQUANTO . expression DOT block
    (32) expression -> . lvalue EQUALS expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MAIOR expression
    (38) expression -> . expression MENOR expression
    (39) expression -> . expression IGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . COMP expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . INTEGER
    (44) expression -> . ZERO
    (45) expression -> . IDENTIFIER
    (46) expression -> . ELGIO
    (47) expression -> . FUNCTION_NAME LPAREN argument_list_opt RPAREN
    (30) lvalue -> . IDENTIFIER
    (31) lvalue -> . ELGIO

    COMP            shift and go to state 29
    LPAREN          shift and go to state 30
    INTEGER         shift and go to state 31
    ZERO            shift and go to state 32
    IDENTIFIER      shift and go to state 24
    ELGIO           shift and go to state 33
    FUNCTION_NAME   shift and go to state 34

    expression                     shift and go to state 54
    lvalue                         shift and go to state 28

state 28

    (32) expression -> lvalue . EQUALS expression

    EQUALS          shift and go to state 55


state 29

    (41) expression -> COMP . expression
    (32) expression -> . lvalue EQUALS expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MAIOR expression
    (38) expression -> . expression MENOR expression
    (39) expression -> . expression IGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . COMP expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . INTEGER
    (44) expression -> . ZERO
    (45) expression -> . IDENTIFIER
    (46) expression -> . ELGIO
    (47) expression -> . FUNCTION_NAME LPAREN argument_list_opt RPAREN
    (30) lvalue -> . IDENTIFIER
    (31) lvalue -> . ELGIO

    COMP            shift and go to state 29
    LPAREN          shift and go to state 30
    INTEGER         shift and go to state 31
    ZERO            shift and go to state 32
    IDENTIFIER      shift and go to state 24
    ELGIO           shift and go to state 33
    FUNCTION_NAME   shift and go to state 34

    expression                     shift and go to state 56
    lvalue                         shift and go to state 28

state 30

    (42) expression -> LPAREN . expression RPAREN
    (32) expression -> . lvalue EQUALS expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MAIOR expression
    (38) expression -> . expression MENOR expression
    (39) expression -> . expression IGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . COMP expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . INTEGER
    (44) expression -> . ZERO
    (45) expression -> . IDENTIFIER
    (46) expression -> . ELGIO
    (47) expression -> . FUNCTION_NAME LPAREN argument_list_opt RPAREN
    (30) lvalue -> . IDENTIFIER
    (31) lvalue -> . ELGIO

    COMP            shift and go to state 29
    LPAREN          shift and go to state 30
    INTEGER         shift and go to state 31
    ZERO            shift and go to state 32
    IDENTIFIER      shift and go to state 24
    ELGIO           shift and go to state 33
    FUNCTION_NAME   shift and go to state 34

    expression                     shift and go to state 57
    lvalue                         shift and go to state 28

state 31

    (43) expression -> INTEGER .

    PLUS            reduce using rule 43 (expression -> INTEGER .)
    MINUS           reduce using rule 43 (expression -> INTEGER .)
    TIMES           reduce using rule 43 (expression -> INTEGER .)
    DIVIDE          reduce using rule 43 (expression -> INTEGER .)
    MAIOR           reduce using rule 43 (expression -> INTEGER .)
    MENOR           reduce using rule 43 (expression -> INTEGER .)
    IGUAL           reduce using rule 43 (expression -> INTEGER .)
    DIFERENTE       reduce using rule 43 (expression -> INTEGER .)
    DOT             reduce using rule 43 (expression -> INTEGER .)
    RPAREN          reduce using rule 43 (expression -> INTEGER .)
    COMMA           reduce using rule 43 (expression -> INTEGER .)


state 32

    (44) expression -> ZERO .

    PLUS            reduce using rule 44 (expression -> ZERO .)
    MINUS           reduce using rule 44 (expression -> ZERO .)
    TIMES           reduce using rule 44 (expression -> ZERO .)
    DIVIDE          reduce using rule 44 (expression -> ZERO .)
    MAIOR           reduce using rule 44 (expression -> ZERO .)
    MENOR           reduce using rule 44 (expression -> ZERO .)
    IGUAL           reduce using rule 44 (expression -> ZERO .)
    DIFERENTE       reduce using rule 44 (expression -> ZERO .)
    DOT             reduce using rule 44 (expression -> ZERO .)
    RPAREN          reduce using rule 44 (expression -> ZERO .)
    COMMA           reduce using rule 44 (expression -> ZERO .)


state 33

    (46) expression -> ELGIO .
    (31) lvalue -> ELGIO .
